Setting up basic performance test
- added scripts and customer feeders and so on from IER perf test

- added search terms

- Basic config also

--- a/simulation.conf
+++ b/simulation.conf
@@ -4,5 +4,6 @@ repeat=10
 unit=times
 minIdleTime=0
 maxIdleTime=0
-url="http://localhost:5000"
+buyer_url="http://localhost:5002"
+data_api_url="http://localhost:5000"
 token="myToken"
