--- a/simulation.conf
+++ b/simulation.conf
@@ -7,5 +7,5 @@ maxIdleTime=0
 buyer_url="http://localhost:5002"
 data_api_url="http://localhost:5000"
 token="myToken"
-supplierEmailAddress="test"
-supplierPassword="test"
+username="test"
+password="test"
