Setting base url via conf

--- a/simulation.conf
+++ b/simulation.conf
@@ -4,7 +4,7 @@ repeat=10
 unit=times
 minIdleTime=0
 maxIdleTime=0
-buyer_url="http://localhost:5002"
+baseUrl="http://localhost:5002"
 data_api_url="http://localhost:5000"
 token="myToken"
 username="test"
