--- a/conf/recorder.conf
+++ b/conf/recorder.conf
@@ -6,7 +6,7 @@ recorder {
         headless=false
         mode=Proxy
         outputFolder="/Users/christopherwynne/Desktop/gatling-charts-highcharts-bundle-2.3.1/user-files/simulations"
-        package=gCloud10Application
+        package="testing_form_data"
         saveConfig=true
         thresholdForPauseCreation=100
     }
