Create basic DOS 5 test scenario
I created a simple test scenario where a user joins the DOS 5 framework, confirms their company details, and then creates and deletes a user research service.

This is a simple proof of concept to show that I can create a Gatling scenario. There are a number of hard-coded things (e.g. the base URL) that I'll need to sort out later. The next step will be to create the other user flows we need (declaration questions, for example).

This works only on my local machine - I have a script to generate the users and suppliers for this test (PR to follow). Submitting it as a PR in the interests of getting fast feedback.

--- a/conf/recorder.conf
+++ b/conf/recorder.conf
@@ -1,6 +1,6 @@
 recorder {
     core {
-        className=CloudSupportService
+        className=ConfirmDetails
         encoding=utf-8
         harFilePath=""
         headless=false
@@ -8,6 +8,7 @@ recorder {
         outputFolder="/Users/christopherwynne/Desktop/gatling-charts-highcharts-bundle-2.3.1/user-files/simulations"
         package="testing_form_data"
         saveConfig=true
+        simulationsFolder="/home/benjamin/code/digitalmarketplace-performance-testing/user-files/simulations"
         thresholdForPauseCreation=100
     }
     filters {
@@ -19,10 +20,12 @@ recorder {
             ".*\\.jpg",
             ".*\\.ico",
             ".*\\.woff",
+            ".*\\.woff2",
             ".*\\.(t|o)tf",
-            ".*\\.png"
+            ".*\\.png",
+            ".*detectportal\\.firefox\\.com.*"
         ]
-        filterStrategy=BlacklistFirst
+        filterStrategy=BlackListFirst
         whitelist=[]
     }
     http {
@@ -31,6 +34,8 @@ recorder {
         followRedirect=true
         inferHtmlResources=true
         removeCacheHeaders=true
+        useMethodAndUriAsPostfix=false
+        useSimulationAsPrefix=false
     }
     netty {
         maxChunkSize=8192
