Add UR Participants service scenario for DOS 5

--- a/conf/recorder.conf
+++ b/conf/recorder.conf
@@ -1,12 +1,12 @@
 recorder {
     core {
-        className=ConfirmDetails
+        className=UserResearchParticipants
         encoding=utf-8
         harFilePath=""
         headless=false
         mode=Proxy
         outputFolder="/Users/christopherwynne/Desktop/gatling-charts-highcharts-bundle-2.3.1/user-files/simulations"
-        package="testing_form_data"
+        package=dos5Application
         saveConfig=true
         simulationsFolder="/home/benjamin/code/digitalmarketplace-performance-testing/user-files/simulations"
         thresholdForPauseCreation=100
